remove extra button

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                     <div class="card-title">📋 Actions</div>
                     <button class="btn btn-primary" onclick="runPipeline()" id="runBtn">▶ Run Pipeline</button>
                     <button class="btn btn-secondary" onclick="checkStatus()">🔍 Check Status</button>
-                    <button class="btn btn-secondary" onclick="loadScenarios()">📑 Load Scenarios</button>
+                    <!-- <button class="btn btn-secondary" onclick="loadScenarios()">📑 Load Scenarios</button> -->
                 </div>
 
                 <div class="card">
